contact form is now active when anyone provide data and then submit the button then it will go on my email i am use ther emailjs who send me to my email inbox

--- a/portfolio-2.0-frontend/index.html
+++ b/portfolio-2.0-frontend/index.html
@@ -9,5 +9,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.6.4/dist/email.min.js"></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init("YL6_OLSzXe5GETMNt");
+      })();
+    </script> -->
   </body>
 </html>
